---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1061                                 -
---------------------------------------------
- 2021-01-06                                -
---------------------------------------------
.: WSM: BugFix: Social media editor not shown in mobile size (WSM-268)
.: WSM: Task: Able to not enter ETA time if not confirmed yet (WSM-277)

- v1.0.1060                                 -
---------------------------------------------
- 2021-01-03                                -
---------------------------------------------
.: WSM: Task: Update currencyService (WSW-94)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Style the font weight and adjust invoice size (WSW-94)

---------------------------------------------
- 2020-12-27                                -
---------------------------------------------
.: WSM: Task: Mark order as self-pickup (WSM-257)
.: WSW: Task: Rename order to invoice (WSW-94)

---------------------------------------------
- 2020-12-26                                -
---------------------------------------------
.: WSW: Feature: Invoice Module (WSW-94)
.: WSM: Task: Prevent receiptId got brute force and customer information being exposed (WSW-98)

- v1.0.1050                                 -
---------------------------------------------
- 2020-12-06                                -
---------------------------------------------
.: WSW: Task: Update twitter meta (WSW-84)
.: WSM: Task: Update autocomplete api (WSW-93)

---------------------------------------------
- 2020-12-05                                -
---------------------------------------------
.: WSW: Task: Create Buildbot (WSW-84)

---------------------------------------------
- 2020-12-04                                -