@@ -18,5 +18,5 @@
 </ng-template>
 
 <ng-template #noStoreTemplate>
-    <h6 class="my-5 py-5 text-center">Store is not found!</h6>
+    <h6 class="my-5 py-5 text-center">Store is not found!<br/><br/>It might be under maintenance!</h6>
 </ng-template>
