@@ -4,6 +4,11 @@
 
 - v1.0.1061                                 -
 ---------------------------------------------
+- 2021-01-08                                -
+---------------------------------------------
+.: WSW: BugFix: When store is under maintenance, add the message (WSW-101)
+
+---------------------------------------------
 - 2021-01-06                                -
 ---------------------------------------------
 .: WSM: BugFix: Social media editor not shown in mobile size (WSM-268)
